--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
                 <h3 class="font-weight-light">Who Is Anita?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">She is a result driven Digital Marketing Specialist </h5>
-                <p class="mt-20"> She is higly skilled in Digital Marketing, Social Media marketing, Content,Branding and Identity and Web</p>
+                <p class="mt-20"> Anita Mocheche is a digital marketing specialist that centers her career on Social Media Marketing, Search Engine Optimization, Content Creation and Distribution, Content Strategy, SEM, PPC, Media Buying and Planning. 
+
+<p class="mt-20">On her free time Anita is a model and has a passion for acting.</p>
+
+<p class="mt-20">She has both the passion and skillset to foster Brand Awareness, Consideration and Convert potentials to clients i.e Lead Generation</p>
                 
             </div>
             <div class="col-lg-4 about-card">
@@ -156,13 +160,27 @@
                         </div>
                         <div class="card-body">
 
+
+			    <h6 class="title text-danger">GONEP PHARMACEUTICALS</h6>
+                            <h5 class="title text-danger">Jan 2024 - Present</h6>
+                            <h5>Marketing Intern</h5>
+                            <P class="subtitle">Managing Social Profile (SMM)</P>
+                            <P class="subtitle">Creating strategies for social media campaigns</P>
+                            <P class="subtitle">Website SEO and SEM</P>
+                            <P class="subtitle">Email Marketing</P>
+			    <P class="subtitle">Managing company's Digital Assets</P>
+			    <P class="subtitle">Branding and Identity</P>
+                            <hr>
+
+				
+
                             <h6 class="title text-danger"> Reaction Power Inc.</h6>
                             <h5 class="title text-danger">Jun 2023 - Present</h6>
                             <h5>Digital marketing specialist</h5>
                             <P class="subtitle">Executive Branding for clients</P>
                             <P class="subtitle">Handling Linkedin pages for Executives ensuring engangement on content </P>
                             <P class="subtitle">Helped in running companies blog </P>
-                            <P class="subtitle">Community Management foe Executives' social platforms</P>
+                            <P class="subtitle">Community Management for Executives' social platforms</P>
                             <hr>
 
                             <h6 class="title text-danger">Maramoja Taxi App</h6>
@@ -170,7 +188,7 @@
                             <h5>Brand Ambassador</h5>
                             <P class="subtitle">Conducted market research and competitor analysis to identify opportunities and trends</P>
                             <P class="subtitle">Ensured sales in terms of app download </P>
-                            <P class="subtitle">Analysed data and conducted A/B tests to refine startegies and improve ROI by 30% </P>
+                            <P class="subtitle">Analysed data and conducted A/B tests to refine strategies and improve ROI by 30% </P>
                             <hr>
 
                             <h6 class="title text-danger">Mamadobi App</h6>
@@ -644,7 +662,7 @@
                                 <i class="ti-envelope icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">info@website.com</span></h6>
+                                <h6 class="d-inline">Email :<br> <span class="text-muted">mochecheanita@gmail.com</span></h6>
                             </div>
                         </div>
                         <!-- social icons
