--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			    <h6 class="title text-danger">GONEP PHARMACEUTICALS</h6>
                             <h5 class="title text-danger">Jan 2024 - Present</h6>
                             <h5>Marketing Intern</h5>
-                            <P class="subtitle">Managing Social Profile (SMM)</P>
+                            <P class="subtitle">Managing Social Profiles (SMM)</P>
                             <P class="subtitle">Creating strategies for social media campaigns</P>
                             <P class="subtitle">Website SEO and SEM</P>
                             <P class="subtitle">Email Marketing</P>
@@ -179,14 +179,14 @@
                             <h5>Digital marketing specialist</h5>
                             <P class="subtitle">Executive Branding for clients</P>
                             <P class="subtitle">Handling Linkedin pages for Executives ensuring engangement on content </P>
-                            <P class="subtitle">Helped in running companies blog </P>
+                            <P class="subtitle">Helped in running company's blog </P>
                             <P class="subtitle">Community Management for Executives' social platforms</P>
                             <hr>
 
                             <h6 class="title text-danger">Maramoja Taxi App</h6>
                             <h5 class="title text-danger">Jan 2023 - Jun 2023</h6>
                             <h5>Brand Ambassador</h5>
-                            <P class="subtitle">Conducted market research and competitor analysis to identify opportunities and trends</P>
+                            <P class="subtitle">Conducted marketing research and competitor analysis to identify opportunities and trends</P>
                             <P class="subtitle">Ensured sales in terms of app download </P>
                             <P class="subtitle">Analysed data and conducted A/B tests to refine strategies and improve ROI by 30% </P>
                             <hr>
@@ -223,7 +223,7 @@
                             </div>
                             
                                 <p>Generation Kenya's Digital Customer Service Certification</p> 
-                                <p>LinkedIn Marketing Labs Certification</p> 
+                                <p>LinkedIn Marketing Lab's Certifications</p> 
                                 <p>Twitter Flight School</p> 
                                 <p>Facebook Blueprint by Meta</p> 
                                 <p>Aleph's Digital Ad Expert Certification</p> 
@@ -308,7 +308,7 @@
                         </div>
                         <div class="col-7 text-left py-3">
                             <h1 class="text-danger font-weight-bold font40">20+</h1>
-                            <p class="text-light mb-1">Project Finished</p>
+                            <p class="text-light mb-1">Projects Finished</p>
                         </div>
                     </div>
                 </div>
@@ -330,7 +330,7 @@
                         </div>
                         <div class="col-7 text-left py-3">
                             <h1 class="text-danger font-weight-bold font40">100</h1>
-                            <p class="text-light mb-1">Coffee Drinked</p>
+                            <p class="text-light mb-1">Coffees Drunk</p>
                         </div>
                     </div>
                 </div>
